--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -89,8 +89,12 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
             chmod +x nff &&
-            (sudo killall nff || true) &&
-            export DB_URL=$RDS_DB_URL &&
+            if pgrep nff > /dev/null; then
+              echo 'Stopping running nff process...'
+              sudo pkill nff
+            else
+              echo 'No nff process running, continuing...'
+            fi &&export DB_URL=$RDS_DB_URL &&
             export REDIS_URL=$ELASTICACHE_URL &&
             export SS_API_BASE_URL=$SS_API_BASE_URL &&
             export START_FRESH=true &&
