--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -89,13 +89,14 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
             chmod +x nff &&
-            export DB_URL=$RDS_DB_URL &&
-            export REDIS_URL=$ELASTICACHE_URL &&
-            export SS_API_BASE_URL=$SS_API_BASE_URL &&
-            export START_FRESH=true &&
-            export TZ=America/Sao_Paulo &&
-            export PORT=80 &&
-            sudo nohup ./nff > nff.log 2>&1 || { echo 'Failed to start nff'; cat nff.log; exit 1; }
+            sudo nohup env \ 
+              DB_URL=$RDS_DB_URL \
+              REDIS_URL=$ELASTICACHE_URL \
+              SS_API_BASE_URL=$SS_API_BASE_URL \
+              START_FRESH=true \
+              TZ=America/Sao_Paulo \
+              PORT=80 \
+              ./nff > nff.log 2>&1 || { echo 'Failed to start nff'; cat nff.log; exit 1; }
           "
 
       - name: Clean up private key
