--- a/web/docker-compose.yaml
+++ b/web/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     ports:
       - 8080:8080
     volumes:
-      - ./:/home/app
+      - ./:/app
     depends_on:
       - db
       - rdb
