--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -18,12 +18,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          filter: web
 
       - name: Docker login
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build project image
-        working-directory: ./web
         run: docker build -t $WEB_IMAGE_TAG .
 
       - name: Push images to Docker Hub
@@ -37,14 +38,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          filter: web/database/migrations
 
       - name: Setup goose
         uses: mscno/setup-goose@v1
 
       - name: Apply migrations
-        working-directory: ./web
         run: |
-          goose -dir ./database/migrations -v -s postgres $RDS_DB_URL up
+          goose -dir ./migrations -v -s postgres $RDS_DB_URL up
   deploy:
     needs:
       - build
@@ -61,6 +63,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          filter: web/nginx
 
       - name: Set up SSH
         run: |
@@ -69,7 +73,7 @@ jobs:
 
       - name: Transfer Nginx Conf to EC2
         run: |
-          scp -o StrictHostKeyChecking=no -i private_key.pem ./web/nginx/nginx.conf ${USER_NAME}@${HOSTNAME}:/home/${USER_NAME}/
+          scp -o StrictHostKeyChecking=no -i private_key.pem ./nginx/nginx.conf ${USER_NAME}@${HOSTNAME}:/home/${USER_NAME}/
 
       - name: Connect to EC2 instance and deploy
         run: |
@@ -92,8 +96,6 @@ jobs:
               --rm \
               --detach \
               --name nff-web \
-              -p 80:8080 \
-              -p 443:8080 \
               -p 8080:8080 \
               -e PORT=8080 \
               -e START_FRESH=true \
