--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -84,6 +84,8 @@ jobs:
             docker ps -q | xargs -r docker stop &&
             docker ps -q | xargs -r docker rm &&
 
+            docker network create nff-network &&
+
             # Run Nginx container
             docker run \
               --network nff-network \
