--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -8,7 +8,7 @@ http {
         server_name notafiscalfacil.com;
 
         location / {
-            proxy_pass http://nff:8080;
+            proxy_pass http://nff-web:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,7 +29,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/notafiscalfacil.com/privkey.pem;
 
         location / {
-            proxy_pass http://nff:8080;
+            proxy_pass http://nff-web:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
