--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -81,9 +81,9 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
             # Remove any running container, image, volume or network
             docker system prune -af --volumes &&
-            docker network prune -f &&
             docker ps -q | xargs -r docker stop &&
             docker ps -q | xargs -r docker rm &&
+            docker network prune --force --filter label=nff-network &&
 
             docker network create nff-network &&
 
