--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name notafiscalfacil.com;
+        server_name notafiscalfacil.com www.notafiscalfacil.com;
 
         location / {
             proxy_pass http://nff-web:8080;
@@ -23,7 +23,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name notafiscalfacil.com;
+        server_name notafiscalfacil.com www.notafiscalfacil.com;
 
         ssl_certificate /etc/letsencrypt/live/notafiscalfacil.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/notafiscalfacil.com/privkey.pem;
