--- a/web/Dockerfile.dev
+++ b/web/Dockerfile.dev
@@ -3,7 +3,7 @@ FROM golang:1.22
 RUN apt update -y && \
     apt upgrade -y
 
-WORKDIR /home/app
+WORKDIR /app
 
 RUN go install github.com/air-verse/air@latest && \
     go install github.com/a-h/templ/cmd/templ@v0.2.707
