--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -87,13 +87,24 @@ jobs:
 
             docker network create nff-network &&
 
-            # Run nff container
+            # Run nff containers
             docker run \
               --network nff-network \
               --rm \
               --detach \
-              --name nff-web \
-              -p 8080:8080 \
+              --name nff-web_1 \
+              -e PORT=8080 \
+              -e START_FRESH=true \
+              -e TZ=America/Sao_Paulo \
+              -e DB_URL=$RDS_DB_URL \
+              -e REDIS_URL=$ELASTICACHE_URL \
+              -e SS_API_BASE_URL=$SS_API_BASE_URL \
+              $WEB_IMAGE_TAG &&
+            docker run \
+              --network nff-network \
+              --rm \
+              --detach \
+              --name nff-web_2 \
               -e PORT=8080 \
               -e START_FRESH=true \
               -e TZ=America/Sao_Paulo \
