--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -5,6 +5,11 @@ events {
 worker_processes auto;
 
 http {
+    upstream nff-web-cluster {
+        server nff-web_1:8080;
+        server nff-web_2:8080;
+    }
+
     server {
         listen 80;
         server_name notafiscalfacil.com www.notafiscalfacil.com;
@@ -23,7 +28,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/notafiscalfacil.com/privkey.pem;
 
         location / {
-            proxy_pass http://nff-web:8080;
+            proxy_pass http://nff-web-cluster;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
