--- a/web/Dockerfile.dev
+++ b/web/Dockerfile.dev
@@ -10,6 +10,6 @@ RUN go install github.com/air-verse/air@latest && \
 
 COPY . .
 
-RUN templ generate && go mod vendor
+RUN templ generate && go mod tidy && go mod vendor
 
 CMD [ "air" ]
