--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -34,5 +34,20 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        location /sse/notify-operations-results {
+            proxy_pass http://nff-web-cluster;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_read_timeout 8h;
+            proxy_connect_timeout 8h;
+            proxy_send_timeout 8h;
+
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+        }
     }
 }
