--- a/.github/workflows/nff_ss_api_deploy.yaml
+++ b/.github/workflows/nff_ss_api_deploy.yaml
@@ -13,10 +13,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      AWS_REGION: ${{ secrets.SS_API_AWS_REGION }} 
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -36,3 +32,7 @@ jobs:
         uses: serverless/github-action@v3.2
         with:
           args: deploy
+        env:
+          AWS_REGION: ${{ secrets.SS_API_AWS_REGION }} 
+          AWS_ACCESS_KEY_ID: ${{ secrets.SS_API_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SS_API_AWS_SECRET_ACCESS_KEY }}
