--- a/.github/workflows/nff_ss_api_deploy.yaml
+++ b/.github/workflows/nff_ss_api_deploy.yaml
@@ -19,19 +19,11 @@ jobs:
         with:
           sparse-checkout: ss-api/
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install requirements
-        working-directory: ./ss-api
-        run: python -m pip install -r requirements.txt
-
       - name: Deploy to AWS Lambda
         uses: serverless/github-action@v3.2
         with:
-          args: deploy
+          args: -c "cd ./ss-api && serverless deploy"
+          entrypoint: /bin/sh
         env:
           AWS_REGION: ${{ secrets.SS_API_AWS_REGION }} 
           AWS_ACCESS_KEY_ID: ${{ secrets.SS_API_AWS_ACCESS_KEY_ID }}
