--- a/.github/workflows/nff_ss_api_deploy.yaml
+++ b/.github/workflows/nff_ss_api_deploy.yaml
@@ -13,18 +13,19 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      AWS_REGION: ${{ secrets.SS_API_AWS_REGION }} 
+      AWS_ACCESS_KEY_ID: ${{ secrets.SS_API_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.SS_API_AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           sparse-checkout: ss-api/
 
+      - name: Install Serverless
+        run: npm i -g serverless
+
       - name: Deploy to AWS Lambda
-        uses: serverless/github-action@v3.2
-        with:
-          args: -c "cd ./ss-api && serverless deploy"
-          entrypoint: /bin/sh
-        env:
-          AWS_REGION: ${{ secrets.SS_API_AWS_REGION }} 
-          AWS_ACCESS_KEY_ID: ${{ secrets.SS_API_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.SS_API_AWS_SECRET_ACCESS_KEY }}
+        working-directory: ./ss-api
+        run: sls deploy --verbose
