--- a/.github/workflows/nff_ss_api_deploy.yaml
+++ b/.github/workflows/nff_ss_api_deploy.yaml
@@ -28,4 +28,4 @@ jobs:
 
       - name: Deploy to AWS Lambda
         working-directory: ./ss-api
-        run: sls deploy --verbose
+        run: sls deploy --verbose --force
