--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -31,25 +31,8 @@ jobs:
       - name: Push image to Docker Hub
         run: |
           docker push $WEB_IMAGE_TAG
+
   migrate:
-    needs: build
-    runs-on: ubuntu-latest
-    env:
-      RDS_DB_URL: ${{ secrets.RDS_DB_URL }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout: web/database/migrations/
-
-      - name: Setup goose
-        uses: mscno/setup-goose@v1
-
-      - name: Apply migrations
-        run: |
-          goose -dir ./web/database/migrations -v -s postgres $RDS_DB_URL up
-
-  migrate_turso:
     needs: build
     runs-on: ubuntu-latest
     env:
@@ -81,7 +64,6 @@ jobs:
       PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
       HOSTNAME: ${{ secrets.EC2_SSH_HOST_2 }}
       USER_NAME: ${{ secrets.EC2_USER_NAME }}
-      RDS_DB_URL: ${{ secrets.RDS_DB_URL }}
       ELASTICACHE_URL: ${{ secrets.ELASTICACHE_URL }}
       SS_API_BASE_URL: ${{ secrets.SS_API_BASE_URL }}
       TURSO_DATABASE_URL: ${{ secrets.TURSO_DATABASE_URL }}
@@ -112,7 +94,7 @@ jobs:
 
             docker network create nff-network &&
 
-            # Run nff containers
+            # Run NFF containers
             docker run \
               --network nff-network \
               --rm \
@@ -123,7 +105,6 @@ jobs:
               -e TZ=America/Sao_Paulo \
               -e TURSO_DATABASE_URL=$TURSO_DATABASE_URL \
               -e TURSO_AUTH_TOKEN=$TURSO_AUTH_TOKEN \
-              -e DB_URL=$RDS_DB_URL \
               -e REDIS_URL=$ELASTICACHE_URL \
               -e SS_API_BASE_URL=$SS_API_BASE_URL \
               $WEB_IMAGE_TAG &&
@@ -137,7 +118,6 @@ jobs:
               -e TZ=America/Sao_Paulo \
               -e TURSO_DATABASE_URL=$TURSO_DATABASE_URL \
               -e TURSO_AUTH_TOKEN=$TURSO_AUTH_TOKEN \
-              -e DB_URL=$RDS_DB_URL \
               -e REDIS_URL=$ELASTICACHE_URL \
               -e SS_API_BASE_URL=$SS_API_BASE_URL \
               $WEB_IMAGE_TAG &&
