--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -6,8 +6,7 @@ worker_processes auto;
 
 http {
     upstream nff-web-cluster {
-        server nff-web_1:8080;
-        server nff-web_2:8080;
+        server nff-web:8080;
     }
 
     server {
