fix: free port 80

--- a/.github/workflows/nff_web_cert_renewal_cron.yaml
+++ b/.github/workflows/nff_web_cert_renewal_cron.yaml
@@ -20,10 +20,11 @@ jobs:
 
       - name: Connect to EC2 instance and renew certificate
         run: |
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} '
             docker ps -q | xargs -r docker stop &&
-            sudo certbot renew
-          "
+            sudo certbot renew &&
+            sudo kill -9 $(sudo lsof -t -i :80) 2>/dev/null || echo "No process found using port 80"
+          '
 
   call_build_and_deploy_workflow:
     needs: renew_certificate
