--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -1,7 +1,9 @@
 name: nff_web_build_and_deploy
 
 on:
-  workflow_call:
+  repository_dispatch:
+    types:
+      - build_and_deploy_trigger
   workflow_dispatch:
   push:
     branches:
