--- a/.github/workflows/nff_web_cert_renewal_cron.yaml
+++ b/.github/workflows/nff_web_cert_renewal_cron.yaml
@@ -10,8 +10,7 @@ on:
 
   workflow_dispatch:
   schedule:
-    # Run at midnight on the 1st day of every other month
-    - cron: '0 0 1 1,3,5,7,9,11 *'
+    - cron: "0 0 1 */2 *"  # Every two months
 
 jobs:
   renew_certificate:
@@ -32,8 +31,15 @@ jobs:
             docker ps -q | xargs -r docker stop &&
             sudo certbot renew &&
             sudo kill -9 $(sudo lsof -t -i :80) 2>/dev/null || echo "No process found using port 80"
-          '
 
   call_build_and_deploy_workflow:
     needs: renew_certificate
-    uses: ./.github/workflows/nff_web_build_and_deploy.yaml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Build and Deploy Workflow
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{ github.repository }}/dispatches \
+            -d '{"event_type":"build_and_deploy_trigger"}'
