transfer nginx conf to ec2 on cert renewal

--- a/.github/workflows/nff_web_cert_renewal_cron.yaml
+++ b/.github/workflows/nff_web_cert_renewal_cron.yaml
@@ -20,10 +20,19 @@ jobs:
       HOSTNAME: ${{ secrets.EC2_SSH_HOST_2 }}
       USER_NAME: ${{ secrets.EC2_USER_NAME }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: web/nginx/
+
       - name: Set up SSH
         run: |
           echo "$PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
+
+      - name: Transfer Nginx Conf to EC2
+        run: |
+          scp -o StrictHostKeyChecking=no -i private_key.pem ./web/nginx/nginx.conf ${USER_NAME}@${HOSTNAME}:/home/${USER_NAME}/
 
       - name: Connect to EC2 instance and renew certificate
         run: |
