--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -1,10 +1,18 @@
 name: nff_web_build_and_deploy
 
 on:
+  workflow_run:
+    workflows:
+      - "nff_web_cert_renewal_cron"
+    types:
+      - completed
+
   repository_dispatch:
     types:
       - build_and_deploy_trigger
+
   workflow_dispatch:
+
   push:
     branches:
       - main
