--- a/.github/workflows/nff_web_cert_renewal_cron.yaml
+++ b/.github/workflows/nff_web_cert_renewal_cron.yaml
@@ -1,4 +1,4 @@
-name: renew_certificate_cron
+name: nff_web_cert_renewal_cron
 
 on:
   push:
@@ -44,15 +44,3 @@ jobs:
             sudo certbot renew &&
             sudo kill -9 $(sudo lsof -t -i :80) 2>/dev/null || echo "No process found using port 80"
           '
-
-  call_build_and_deploy_workflow:
-    needs: renew_certificate
-    runs-on: ubuntu-latest
-    steps:
-      - name: Trigger Build and Deploy Workflow
-        run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/dispatches \
-            -d '{"event_type":"build_and_deploy_trigger"}'
