--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,10 +1,10 @@
-FROM golang:1.23 AS builder
+FROM golang:1.24 AS builder
 
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y tzdata ca-certificates
 
-RUN go install github.com/a-h/templ/cmd/templ@v0.2.707
+RUN go install github.com/a-h/templ/cmd/templ@v0.3.857
 
 COPY . .
 
@@ -12,10 +12,13 @@ RUN templ generate && go mod tidy
 
 RUN go build -o nff
 
-# FROM scratch
+FROM debian:bookworm-slim
 
-# COPY --from=builder /app/nff /
-# COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
-# COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+WORKDIR /
 
-CMD [ "./nff" ]
+COPY --from=builder /app/nff /
+COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+
+CMD ["/nff"]
+
